# trap

./: CMakeLists.txt  vcpkg.json
cmake/: trap-config.cmake.in
include/trap/: trap.h
sample/: main.cpp
src/: trap.cpp
